FEAT: Better Docker build
- added automation parameters to control:
  - JAVA_OPTS,
  - git checkout by branch, tag or commit and
  - project version,
- now building custom JRE with only required modules using jlink;
- final app image on Debian Bullseye Slim.